--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/lib/require.js" data-main="js/main"></script>
 </head><body>
-    <div id="page"></div>
+    <div id="page">
+        <div id="game"> </div>
+        <div id="main"> </div>
+        <div id="login"> </div>
+        <div id="scoreboard"> </div>
+        <div id="registration"> </div>
+    </div>
+
 </body></html>
 <script src="//localhost:35729/livereload.js"></script>
