--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/lib/require.js" data-main="js/main"></script>
 </head><body>
-    <div id="page">
-        <div id="game"> </div>
-        <div id="main"> </div>
-        <div id="login"> </div>
-        <div id="scoreboard"> </div>
-        <div id="registration"> </div>
+    <div class="b-page">
+        <div class="b-game"> </div>
+        <div class="b-main"> </div>
+        <div class="b-login"> </div>
+        <div class="b-scoreboard"> </div>
+        <div class="b-registration"> </div>
     </div>
 
 </body></html>
