Первые шаги в сторону мультиплеера. Изменён вью-менеджер

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE  html>
 <html><head>
-    <meta charset="utf-8" />
-    <title>EpicArkanoid</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <script src="js/lib/require.js" data-main="js/main"></script>
+   <meta charset="utf-8" />
+   <title>EpicArkanoid</title>
+   <link rel="stylesheet" href="css/main.css" />
+   <script src="js/lib/require.js" data-main="js/main"></script>
 </head><body>
-    <div id="page">
-        <div id="game"> </div>
-        <div id="main"> </div>
-        <div id="login"> </div>
-        <div id="scoreboard"> </div>
-        <div id="registration"> </div>
-    </div>
+<div id="page">
+   <!--<div id="game"> </div>-->
+   <!--<div id="main"> </div>-->
+   <!--<div id="login"> </div>-->
+   <!--<div id="scoreboard"> </div>-->
+   <!--<div id="registration"> </div>-->
+</div>
 </body></html>
 <script src="//localhost:35729/livereload.js"></script>
