Добавлена сборка js в один файл и минификация

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,12 @@
    <meta charset="utf-8" />
    <title>EpicArkanoid</title>
    <link rel="stylesheet" href="css/main.css" />
-   <script src="js/lib/require.js" data-main="js/main"></script>
+   <script src="js/build.min.js"></script>
+   <script>
+      require(['main'], function(){
+         console.log('App start!');
+      });
+   </script>
 </head><body>
 
 <div id="page">
